--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,1 @@
-{% extends 'base.html' %}
-
-{% block content %}
-
-<div  class="about" id="about">
-	<h1> All About Us </h1>
-</div>
-
-{% endblock %}
+<h1>Work in work !</h1>
