--- a/templates/base.html
+++ b/templates/base.html
@@ -131,7 +131,7 @@
 <body>
   <div class="nav">
     <a class="home-active" href="/">Home</a>
-    <a href="{% url 'about' %}">About</a>
+    <a href="#about">About</a>
     <a href="#contact">Contact</a>
   </div>
 
