--- a/templates/home.html
+++ b/templates/home.html
@@ -24,10 +24,13 @@
   </div>
   {% endfor %}
 
+  <div  class="about" id="about">
+    <h1> All About Us </h1>
+  </div>
+
   <div id="contact" class="contact">
     <h1>Contact Us</h1>
   </div>
-
 <script>
 var coll = document.getElementsByClassName("collapsible");
 var i;
