--- a/templates/home.html
+++ b/templates/home.html
@@ -1,52 +1,23 @@
 {% extends 'base.html' %}
 
+{% block title %}Home{% endblock %}
 {% block content %}
 
+
   <div class="main">
-    <div class="main-one">
-      <h2>Find Your Favorite Topics</h2>
+    <div class="span" id="span">
+      <span style="font-size:32px;cursor:pointer" onclick="openNav()">&#9776;</span>
     </div>
-    <div class="search">
-      <form action="#">
-        <input type="text" placeholder ="search">
-        <button type="submit">Go</button>
+
+    <div class="main-one">
+      <h2>DO you know ?</h2>
+      <h3>19 crore people in India sleep hungry every day. Such is the sad state of affairs.</h3>
+      <br/>
+      <form action="/ngo">
+        <button style="color: #fff; background-color: #4CAF50; padding: 10px; cursor: pointer;">Help Them</button>
       </form>
     </div>
   </div>
-  {% for topic in topic %}
-  <button type="button" class="collapsible">{{topic.tagline}}</button>
-
-  <div class="content">
-    <div class="child">
-      <p>{{topic.text}}</p>
-      <a href="https://{{ topic.url }}">Visit site</a>
-    </div>
-  </div>
-  {% endfor %}
-
-  <div  class="about" id="about">
-    <h1> All About Us </h1>
-  </div>
-
-  <div id="contact" class="contact">
-    <h1>Contact Us</h1>
-  </div>
-<script>
-var coll = document.getElementsByClassName("collapsible");
-var i;
-
-for (i = 0; i < coll.length; i++) {
-  coll[i].addEventListener("click", function() {
-    this.classList.toggle("active");
-    var content = this.nextElementSibling;
-    if (content.style.maxHeight){
-      content.style.maxHeight = null;
-    } else {
-      content.style.maxHeight = content.scrollHeight + "px";
-    } 
-  });
-}
-</script>
 
 
 {% endblock %}
