--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
 
     <div class="main-one">
       <h2>DO you know ?</h2>
-      <h3>19 crore people in India sleep hungry every day. Such is the sad state of affairs.</h3>
+      <h3>19 crore people in India sleep hungry every day :(</h3>
       <br/>
       <form action="/ngo">
         <button style="color: #fff; background-color: #4CAF50; padding: 10px; cursor: pointer;">Help Them</button>
