add youtube vid

--- a/templates/about.html
+++ b/templates/about.html
@@ -13,6 +13,9 @@
       <h2 style="color: #003333; padding:20px;">Make the World Hunger Free</h2>
       <h2 style="color: #fff; padding:20px;">Connect Donors to Ngos</h2>
     </div>
+    <iframe width="420" height="315"
+    src="https://www.youtube.com/embed/tgbNymZ7vqY">
+    </iframe>
 
   </div>
 
