make it better d

--- a/templates/que.html
+++ b/templates/que.html
@@ -21,6 +21,8 @@
         <label for="d">option d</label><br>
         <input style="margin: 20px; background-color: red; cursor: pointer;" type="submit" name="submit">
       </form>
+      {% load static %}
+      <img src="{% static '/tree.jpg' %}">
     </div>
   </div>
 
