--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
       padding: 15px;
       margin-bottom: 10px;
     }
-    input[type=text], input[type=url], input[type=textarea], input[type=password], input[type=username] {
+    input[type=text], input[type=url], input[type=textarea], input[type=password], input[type=username], input[type=email] {
       width: 80%;
       padding: 10px 18px;
       margin: 8px 0;
@@ -55,7 +55,6 @@
       text-align: center;
       position: relative;
     }
-
     .container {
       padding: 16px;
       font-size: large;
@@ -101,6 +100,24 @@
       padding: 20px;
       border-radius: 40px;
     }
+    .loader {
+      border: 16px solid #f3f3f3;
+      border-radius: 50%;
+      border-top: 16px solid #3498db;
+      width: 120px;
+      height: 120px;
+      -webkit-animation: spin 2s linear infinite; /* Safari */
+      animation: spin 2s linear infinite;
+    }
+    @-webkit-keyframes spin {
+      0% { -webkit-transform: rotate(0deg); }
+      100% { -webkit-transform: rotate(360deg); }
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   </style>
 
 </head>
@@ -108,6 +125,6 @@
 {% block content %}
 
 {% endblock %}
-
+<div class="loader"></div>
 </body>
 </html>
